# masters-flashcard-app

./: .gitignore  README.md  app.py  cards.yaml  deploy.py  main.py  prd-flashcard-app.md  pyproject.toml  requirements.txt  user-details.py
cards/: data-science-toolbox.yaml  ensemble-learning.yaml  intro-to-ml.yaml  pragmatic-model-evaluation.yaml  product-management-for-ai.yaml  supervised-classification.yaml
templates/: card.html  home.html
